added teacherswithclassdetails
