# src/middleware.ts
@@ -14,15 +14,17 @@ export async function middleware(request: NextRequest) {
   // ----------------------------------------------------
   if (pathname.startsWith('/api')) {
     // Define protected API routes
-    const protectedRoutes = ['/api/auth/profile', '/api/settings'];
+    const protectedRoutes = ['/api/auth/profile', '/api/settings', '/api/teachers', '/api/teacherswithclassdetails'];
     const adminRoutes = ['/api/admin'];
-    const teacherRoutes = ['/api/teacher'];
+    const teacherRoutes = ['/api/teacher/'];
+    const teacherWithClassDetailsRoutes = ['/api/teacherswithclassdetails/'];
 
     const isProtectedRoute = protectedRoutes.some((route) => pathname.startsWith(route));
     const isAdminRoute = adminRoutes.some((route) => pathname.startsWith(route));
     const isTeacherRoute = teacherRoutes.some((route) => pathname.startsWith(route));
+    const isTeacherWithClassDetailsRoute = teacherWithClassDetailsRoutes.some((route) => pathname.startsWith(route));
 
-    if (isProtectedRoute || isAdminRoute || isTeacherRoute) {
+    if (isProtectedRoute || isAdminRoute || isTeacherRoute || isTeacherWithClassDetailsRoute) {
       const authorization = request.headers.get('authorization');
 
       if (!authorization || !authorization.startsWith('Bearer ')) {
